# NU_Scaler

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  NuScaler_Rework_Plan.md  Nu_Scale_Python_Integration.md  Nu_Scale_Rust_Implementation.md  README.md  TEST-FAILURES-FIX.md  build.bat  build_executable.py  check_pygetwindow.py  debug_import.py  docker-compose.yml  fix-app-key.sh  lfs-files.txt  main.py  nuscaler.spec  post_build.ps1  setup.py  test_dlss.py  test_import.py
.github/: workflowtest-deploy.yml
.github/workflows/: lint-pr.yml  prod-deploy.yml  test-deploy.yml
@web/frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
@web/frontend/src/: App.jsx  index.css  main.jsx  main.jsx.bak
@web/frontend/src/api/: adminApi.js  axios.js
@web/frontend/src/app/: store.js
@web/frontend/src/auth/: AuthForm.jsx  LoginPage.jsx  ProtectedRoute.jsx  RegisterPage.jsx  authSlice.js
@web/frontend/src/components/: ConfirmDialog.jsx  FeatureCard.jsx  FeaturesGrid.jsx  FooterCTA.jsx  HeroSection.jsx  Navbar.jsx  TestimonialsCarousel.jsx  ToastContext.jsx
@web/frontend/src/data/: features.js  testimonials.js
@web/frontend/src/pages/: DownloadPage.jsx  LandingPage.jsx
@web/frontend/src/router/: AdminProtectedRoute.jsx  ProtectedRoute.jsx  index.js  routes.jsx
@web/frontend/src/styles/: admin.css
@web/frontend/src/utils/: downloadHelpers.js
@web/frontend/test-vite-app/: package-lock.json  package.json
@web/server/laravel_app/: Dockerfile  composer.json  docker-compose.yml  package-lock.json  package.json  phpunit.xml  vite.config.js
@web/server/laravel_app/config/: app.php  cache.php  cors.php  l5-swagger.php  logging.php  sanctum.php  session.php
@web/server/laravel_app/public/: index.php  restore.php
@web/server/laravel_app/routes/: api.php  web.php
@web/server/laravel_app/tests/: TestCase.php
Nu_scale/: .gitignore  Cargo.toml
Nu_scale/src/: import_test.rs  lib.rs  logger.rs  main.rs
Nu_scale/src/capture/: common.rs  frame_buffer.rs  frame_buffer_ext.rs  mod.rs  window_finder.rs
Nu_scale/src/capture/platform/: linux.rs  mod.rs  windows.rs
Nu_scale/src/gpu/: mod.rs  vulkan_init.rs
Nu_scale/src/render/: mod.rs  vulkan_renderer.rs
Nu_scale/src/renderer/: fullscreen.rs  mod.rs  wgpu_renderer.rs
Nu_scale/src/shaders/: bicubic_upscale.comp  bilinear_upscale.comp  compile.rs  mod.rs  passthrough.comp
Nu_scale/src/shaders/embedded/: basic.frag  basic.vert  fullscreen.vert  upscale.frag
Nu_scale/src/ui/: egui_ui.rs  gtk_ui.rs  hotkeys.rs  iced_ui.rs  main_window.rs  mod.rs  profile.rs  region_dialog.rs  settings.rs
Nu_scale/src/ui/components/: mod.rs  region_dialog.rs  sidebar.rs  status_bar.rs  top_bar.rs
Nu_scale/src/ui/renderer/: fullscreen.rs  mod.rs
Nu_scale/src/ui/tabs/: advanced.rs  capture.rs  mod.rs  settings.rs
Nu_scale/src/upscale/: common.rs  cuda.rs  dlss.rs  fsr.rs  fsr3.rs  mod.rs  vulkan.rs  xess.rs
app/Events/: BugReportSubmitted.php  HardwareSurveySubmitted.php  ReviewSubmitted.php
app/Http/: Kernel.php
app/Http/Controllers/: TestController.php
app/Http/Middleware/: ApiRateLimiter.php  ApiRequestLogger.php  ForceCors.php  SecureApiHeaders.php
app/Listeners/: LogBugReportSubmission.php  LogHardwareSurveySubmission.php  LogReviewSubmission.php  NotifyAboutCriticalBugReport.php
app/Models/: BugReport.php  HardwareSurvey.php  Review.php  User.php
app/Notifications/: CriticalBugReported.php
app/Observers/: BugReportObserver.php  HardwareSurveyObserver.php  ReviewObserver.php
app/Policies/: BugReportPolicy.php  HardwareSurveyPolicy.php  ReviewPolicy.php
app/Providers/: AppServiceProvider.php  AuthServiceProvider.php  EventServiceProvider.php
bootstrap/: app.php
config/: cors.php  logging.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_05_02_235713_add_uuid_to_users_table.php  2025_05_02_235741_create_bug_reports_table.php  2025_05_02_235741_create_hardware_surveys_table.php  2025_05_02_235741_create_reviews_table.php
nu_scaler_cli/: Cargo.toml
nu_scaler_core/: Cargo.toml  README.md  attribute_test.py  gpu_benchmark.py  gpu_monitor.py  gpu_stress_test.py  gpu_test.py  perf_monitor.py  pyproject.toml  test_core.py  upscale_test.py
nu_scaler_core/dlss-sys/: Cargo.toml  build.rs  wrapper.h
nu_scaler_core/dlss-sys/src/: lib.rs
nu_scaler_core/dlss-sys/stub/: nvsdk_ngx.h  nvsdk_ngx_dlss.h  nvsdk_ngx_params.h
nu_scaler_core/fsr3-sys/: Cargo.toml  build.rs  wrapper.h
nu_scaler_core/fsr3-sys/src/: lib.rs
nu_scaler_core/fsr3-sys/stub/: ffx_fsr3.h  ffx_fsr3_frameinterpolation.h  ffx_fsr3_upscaler.h
nu_scaler_core/src/: benchmark.rs  dlss_manager.rs  dlss_manager.rs.disabled  frame_interpolator.rs  lib.rs  wgpu_interpolator.rs
nu_scaler_core/src/capture/: mod.rs  realtime.rs
nu_scaler_core/src/gpu/: detector.rs  memory.rs  mod.rs
nu_scaler_core/src/interpolation/: mod.rs
nu_scaler_core/src/renderer/: mod.rs
nu_scaler_core/src/shaders/: downsample.wgsl  flow_refine.wgsl  flow_upsample.wgsl  flow_upsample_fixed.wgsl  gaussian_blur_h.wgsl  gaussian_blur_v.wgsl  horn_schunck.wgsl  warp_blend.wgsl
nu_scaler_core/src/upscale/: dlss.rs  dlss_upscaler.rs  fsr.rs  mod.rs
nu_scaler_py/: README.md  benchmark_app.py  import_test.py  modern_ui.py  modern_ui_launcher.py  pyproject.toml  run_modern_ui.py  simple_gui.py  simple_gui_delayed.py  test_basic.py  test_capture.py  test_interpolator.py
nu_scaler_py/nu_scaler/: __init__.py  benchmark.py  core.py  gpu_optimizer.py  gui.py  main.py  modern_gui.py
public/: cors-test.php
py3_numpy_test_temp_minimal/: Cargo.toml_template_for_isolated_test
py3_numpy_test_temp_minimal/src/: lib.rs_template_for_isolated_test
pyo3_numpy_test_temp/: Cargo.toml
pyo3_numpy_test_temp/src/: lib.rs
routes/: api.php  web.php
scripts/: test_interpolator.py
src/: lib.rs
src/capture/: common.rs
src/render/: vulkan_renderer.rs
src/renderer/: fullscreen.rs
src/ui/: egui_ui.rs  region_dialog.rs
src/upscale/: fsr.rs  vulkan.rs
(+133 files in other folders)
