[package]
name = "nu_scaler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
wgpu = "0.15"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.17"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.2"
hotkey = "0.3"
clap = "3.2"

egui = { version = "0.21.0", optional = true }
eframe = { version = "0.22", features = ["wgpu"], optional = true }
opencv = { version = "0.75", optional = true }

[features]
default = ["gui"]
gui = ["egui", "eframe"]
capture_opencv = ["opencv"]
fsr = []
dlss = ["nvtt"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.11", features = ["all-extensions"] }
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["client"] }
