[package]
name = "nu_scaler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
wgpu = "0.15"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.17"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.2"
hotkey = "0.3"
clap = "3.2"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

# Vulkan dependencies
vulkano = "0.34"
vulkano-shaders = "0.34"
bytemuck = "1.15"
ash = "0.37"

# CUDA dependencies removed
# rustacuda = { version = "0.1", optional = true }
# rustacuda_core = { version = "0.1", optional = true }
# rustacuda_derive = { version = "0.1", optional = true }
# cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
# lazy_static = "1.4"

egui = { version = "0.22.0", optional = true }
eframe = { version = "0.22", features = ["wgpu"], optional = true }
opencv = { version = "0.75", optional = true }

[features]
default = ["gui"]
gui = ["egui", "eframe"]
capture_opencv = ["opencv"]
fsr = []
dlss = []
disable_gui = []
# cuda feature removed
# cuda = ["rustacuda", "rustacuda_core", "rustacuda_derive", "cuda-runtime-sys"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_ProcessStatus",
] }

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.11", features = ["all-extensions"] }
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["client"] }
