[package]
name = "nu_scaler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
# Pin wgpu to a single version to avoid linking conflicts
wgpu = "0.18.0"
image = "0.24.0"
anyhow = "1.0.0"
thiserror = "1.0"
pollster = "0.3"
once_cell = "1.17"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.2"
hotkey = "0.3"
clap = "3.2"
log = "0.4.0"
env_logger = "0.10"
chrono = "0.4"
rand = "0.8.5"
raw-window-handle = "0.5"

# Vulkan dependencies
vulkano = "0.34"
vulkano-shaders = "0.34"
bytemuck = "1.15"
ash = "0.37"

# Optional GUI and other features
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", optional = true, features = ["wgpu", "glow"] }
egui_plot = "0.27"
opencv = { version = "0.75", optional = true }

winit = "0.29.0"
egui-wgpu = "0.24.0"

[features]
default = ["gui"]
gui = ["egui", "eframe"]
capture_opencv = ["opencv"]
fsr = []
dlss = []
disable_gui = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.11", features = ["all-extensions"] }
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["client"] }