[package]
name = "nu_scaler_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3"
# pyo3 must be optional if used with dep: in features
pyo3 = { version = "0.21", features = ["extension-module", "numpy"], optional = true }
wgpu = "0.20.0"
raw-window-handle = "0.6"
bytemuck = { version = "1.12", features = ["derive"] }
futures = { version = "0.3", features = ["executor"] } 
futures-intrusive = "0.5.0"
thiserror = "1.0" # Was used in gpu/mod.rs
num_cpus = "1.13"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# Required for GpuDetector -> windows-sys
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }
# Added missing dependencies from error messages
scrap = "0.5"
windows-capture = "1.4"
windows = { version = "0.56", features = [
    "Foundation",
    "Foundation_Metadata",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation", 
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
] }


# Optional dependencies from previous state (may need review)
# dlss-sys = { path = "../dlss-sys", optional = true }
# optical-flow-lk = { git = "https://github.com/opencv-rust/optical-flow-lk", optional = true }
# imageproc = { version = "0.23", optional = true } # For CPU interpolator (disabled)

[dev-dependencies]
# Add test dependencies here
env_logger = "0.11"

[features]
default = ["python"]
# When python feature is enabled, enable pyo3 with its extension-module and numpy features
python = ["pyo3/extension-module", "pyo3/numpy", "dep:serde", "dep:serde_json"]
fsr3 = []

# dlss = ["dep:dlss-sys"]

# cpu_interpolation = ["dep:optical-flow-lk", "dep:imageproc", "dep:serde", "dep:serde_json"]

[build-dependencies]
# Add build dependencies here
