[package]
name = "dlss-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add any dependencies needed for the DLSS bindings, e.g., FFI helpers
# For now, we'll assume the DLSS SDK provides C headers.

[build-dependencies]
cc = "1.0" # For compiling C/C++ code if needed for shims or helpers
bindgen = "0.69.4" # To generate Rust bindings from C headers
clang-sys = "1.7.0" # Added for checking libclang version

[dependencies]
# Add any dependencies needed for the DLSS bindings, e.g., FFI helpers
# For now, we'll assume the DLSS SDK provides C headers. 