[package]
name = "dlss-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add any dependencies needed for the DLSS bindings, e.g., FFI helpers
# For now, we'll assume the DLSS SDK provides C headers.

[build-dependencies]
cc = "1.0" # For compiling C/C++ code if needed for shims or helpers
# bindgen and clang-sys are no longer needed for manual FFI bindings 